--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node",
-    "dev": "nodemon"
+    "dev": "nodemon src/index.js"
 
   },
   "keywords": [],
